--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -26,7 +26,10 @@
 
   /* Backgrounds and Text */
   --background-color: #121212;
-  --text-color: #ffebee;
+  --text-color: #f1f1f1;
+
+  /* Card Background */
+  --card-background-color: #1e1e1e;
 
   /* Transformations */
   --button-hover-transform: scale(1.05);
